--- a/style.css
+++ b/style.css
@@ -79,6 +79,25 @@ body {
   flex-direction: column;
   gap: 1rem;
 }
+
+.phone-input-container {
+  display: flex;
+  align-items: center;
+}
+
+.phone-prefix {
+  font-family: "SF Pro", sans-serif;
+  color: #fff;
+}
+
+#user_number {
+  flex: 1;
+  padding: 0.5em;
+  border: 1px solid #ccc;
+  font-size: 1em;
+  margin-left: 10px;
+}
+
 .input-row {
   display: flex;
   flex-direction: column;
