--- a/style.css
+++ b/style.css
@@ -29,10 +29,10 @@ body {
   z-index: 1000; */
 }
 
-.logo {
+/* .logo {
   width: clamp(100px, 8vw, 150px);
   transition: width 0.3s ease;
-}
+} */
 
 .hero {
   position: relative;
@@ -46,12 +46,12 @@ body {
 }
 
 .hero-heading {
-  font-size: 10.2rem;
+  font-size: 8.2rem;
   color: var(--purple);
   text-align: center;
   transition: width 0.3s ease;
   margin-top: -3rem;
-  margin-bottom: 1rem;
+  margin-bottom: 2rem;
 }
 
 .inverse {
@@ -60,7 +60,7 @@ body {
 
 .hero-subheading {
   margin: -3rem 0 2rem 0;
-  font-size: 2.2rem;
+  font-size: 1.6rem;
   font-family: "Source Sans Pro", sans-serif;
   font-weight: 100;
   text-align: center;
@@ -191,10 +191,10 @@ body {
   .phone-container {
     width: 400px;
   }
-
+  /* 
   .logo {
     width: clamp(100px, 8vw, 150px);
-  }
+  } */
 
   .submit-button {
     transform: scale(1.2);
@@ -220,10 +220,10 @@ body {
     margin: 0 0 1rem 0;
     transform: scale(0.9);
   }
-
+  /* 
   .logo {
     width: clamp(80px, 6vw, 130px);
-  }
+  } */
 
   .submit-button {
     transform: scale(1.3);
